== 0.5.1 (master)
* bug fixes
  * Handle 304 response correctly by returning the HTTParty::Response object instead of redirecting (seth and hellvinz)
  * Only redirect 300 responses if the header contains a Location
* minor enhancements
  * HTTParty#debug_output prints debugging information for the current request (iwarshak)

== 0.5.0 2009-12-07
* bug fixes
  * inheritable attributes no longer mutable by subclasses (yyyc514)
  * namespace BasicObject within HTTParty to avoid class name collisions (eric)

* major enhancements
  * Custom Parsers via class or proc
  * Deprecation warning on HTTParty::AllowedFormats
    moved to HTTParty::Parser::SupportedFormats

* minor enhancements
  * Curl inspired output when using the binary in verbose mode (alexvollmer)
  * raise UnsupportedURIScheme when scheme is not HTTP or HTTPS (djspinmonkey)
  * Allow SSL for ports other than 443 when scheme is HTTPS (stefankroes)
  * Accept PEM certificates via HTTParty#pem (chrislo)
  * Support HEAD and OPTION verbs (grempe)
  * Verify SSL certificates when providing a PEM file (collectiveidea/danielmorrison)

== 0.4.5 2009-09-12
* bug fixes
  * Fixed class-level headers overwritten by cookie management code. Closes #19
  * Fixed "superclass mismatch for class BlankSlate" error. Closes #20
  * Fixed reading files as post data from the command line (vesan)
* minor enhancements
  * Timeout option added; will raise a Timeout::Error after the timeout has elapsed (attack). Closes #17
    HTTParty.get "http://github.com", :timeout => 1
  * Building gem with Jeweler

== 0.4.4 2009-07-19
* 2 minor update
  * :query no longer sets form data. Use body and set content type to application/x-www-form-urlencoded if you need it. :query was wrong for that.
  * Fixed a bug in the cookies class method that caused cookies to be forgotten after the first request.
  * Also, some general cleanup of tests and such.
  
== 0.4.3 2009-04-23
* 1 minor update
  * added message to the response object
  